# Chat-system-Cpp-Python

./: LICENSE  ReadMe.md
Client_py/: .gitignore  Client.py  ClientInterface.ui  ExeMaker_pyinstaller.bat  main.py
Server_cpp/: CMakeLists.txt
Server_cpp/src/: Server_lib.cpp  Server_lib.hpp  main.cpp
